gurps4e.css
/* ... */
.title label {
	text-align: center;
	font-weight: bold;
	color: rgb(144, 144, 144);
	background: none;
	border-style: hidden;
}
.header {
	text-align: center;
	padding-left: 2px;
	padding-right: 2px;
	font-size: 80%;
	font-weight: bold;
	align-self: center;
	line-height: 100%;
	color: rgb(144, 144, 144);
}

.label {
	font-size: 80%;
		white-space: nowrap;
}

.bold {
	font-weight: bold;
}

.right {
	text-align: right;
	padding-left: 2px;
	padding-right: 2px;
	align-self: center;
	color: rgb(144, 144, 144);
}

.center {
	text-align: center;
	padding-left: 2px;
	padding-right: 2px;
	align-self: center;
	color: rgb(144, 144, 144);
}

.left {
	text-align: left;
	padding-left: 2px;
	padding-right: 2px;
	align-self: center;
	color: rgb(144, 144, 144);
}

/* Styles limited to gurps4e sheets */
.gurps4e .item-form {
	font-family: "Roboto", sans-serif;
}

.gurps4e .sheet-body,
.gurps4e .sheet-body .tab,
.gurps4e .sheet-body .tab .editor {
	height: 100%;
}

.gurps4e.sheet .editor .tox-toolbar-overlord,
.gurps4e.sheet .editor .tox-toolbar__primary {
	background: none;
}

.gurps4e .tox .tox-editor-container {
	background: none;
}

.gurps4e .tox .tox-edit-area {
	padding: 0 8px;
}

.gurps4e .items-list {
	list-style: none;
	margin: 7px 0;
	padding: 0;
	overflow-y: auto;
}

.gurps4e .items-list .item-header {
	font-weight: bold;
}

.gurps4e .items-list .item {
	height: 30px;
	line-height: 24px;
	border-bottom: 1px solid #BBB;
}

.gurps4e .items-list .item .item-image {
	flex: 0 0 24px;
	margin-right: 5px;
}

.gurps4e .items-list .item img {
	display: block;
}

.gurps4e .items-list .item-name {
	margin: 0;
}

.gurps4e .items-list .item-controls {
	flex: 0 0 36px;
	text-align: right;
}

/* how to add icons to the sheet */
.icanhazicon {
	width:20px;
	height:20px;
	background-image: url('icons/anIconName.png');
	background-size: cover;
}

#stHeader {
	grid-area: stHeader;
	display: grid;
	align-self: center;
	background-color: rgba(255, 0, 0, 0.05);
}

#st {
	grid-area: st;
	display: grid;
	align-self: center;
	background-color: rgba(255, 0, 0, 0.05);
}

#lst {
	grid-area: lst;
	display: grid;
	align-self: center;
	background-color: rgba(255, 0, 0, 0.05);
}

#sst {
	grid-area: sst;
	display: grid;
	align-self: center;
	background-color: rgba(255, 0, 0, 0.05);
}

#kb {
	grid-area: kb;
	display: grid;
	align-self: center;
	background-color: rgba(255, 0, 0, 0.05);
}

#dxHeader{
	grid-area: dxHeader;
	display: grid;
	align-self: center;
	background-color: rgba(0, 255, 0, 0.05);
}

#dx {
	grid-area: dx;
	display: grid;
	align-self: center;
	background-color: rgba(0, 255, 0, 0.05);
}

#speed {
	grid-area: speed;
	display: grid;
	align-self: center;
	background-color: rgba(0, 255, 0, 0.05);
}

#move {
	grid-area: move;
	display: grid;
	align-self: center;
	background-color: rgba(0, 255, 0, 0.05);
}

#dodge {
	grid-area: dodge;
	display: grid;
	align-self: center;
	background-color: rgba(0, 255, 0, 0.05);
}

#iqHeader {
	grid-area: iqHeader;
	display: grid;
	align-self: center;
	background-color: rgba(0, 0, 255, 0.05);
}

#iq {
	grid-area: iq;
	display: grid;
	align-self: center;
	background-color: rgba(0, 0, 255, 0.05);
}

#per {
	grid-area: per;
	display: grid;
	align-self: center;
	background-color: rgba(0, 0, 255, 0.05);
}

#senses {
	grid-area: senses;
	align-self: center;
	background-color: rgba(0, 0, 255, 0.05);
}


#will {
	grid-area: will;
	display: grid;
	align-self: center;
	background-color: rgba(0, 0, 255, 0.05);
}

#fr {
	grid-area: fr;
	display: grid;
	align-self: center;
	background-color: rgba(0, 0, 255, 0.05);
}

#htHeader {
	grid-area: htHeader;
	display: grid;
	align-self: center;
	background-color: rgba(255, 255, 0, 0.05);
}

#ht {
	grid-area: ht;
	display: grid;
	align-self: center;
	background-color: rgba(255, 255, 0, 0.05);
}

#hts {
	grid-area: hts;
	display: grid;
	align-self: center;
	background-color: rgba(255, 255, 0, 0.05);
}

#htk {
	grid-area: htk;
	display: grid;
	align-self: center;
	background-color: rgba(255, 255, 0, 0.05);
}

#vis label:nth-child(1) {
	padding-right: 67px;
}

#hear label:nth-child(1) {
	padding-right: 59px;
}

#smell label:nth-child(1) {
	padding-right: 29px;
}

#touch label:nth-child(1) {
	padding-right: 69px;
}

#z1 {
	grid-area: z1;
	display: grid;
	align-self: center;
}

#z2 {
	grid-area: z2;
	display: grid;
	align-self: center;
}

#z3 {
	grid-area: z3;
	display: grid;
	align-self: center;
}

.equipment-header td {
	text-align: center;
	padding: 0 0.5em;
	font-weight: bold;
}

.equipment-entry td {
	text-align: center;
}

.enc-header td {
	text-align: center;
	padding: 0 0.5em;
	font-weight: bold;
}

.enc-entry td {
	text-align: center;
	padding: 0 0.5em;
}

.trait-category-header {
	background-color: rgba(0, 0, 0, 0.1) !important;
	text-align: center;
	text-decoration: underline;
	font-size: large;
}

.accordion-open {

}

.accordion-closed {
	display: none;
}

.dr-damage-types {
	text-align: center;
	border-left: 1px solid #b5b3a4;
	border-right: 1px solid #b5b3a4;
}

.dr-header {
	border-left: 1px solid #b5b3a4;
}

.dr-header {
	text-align: center;
}

.dr-row {
	border-left: 1px solid #b5b3a4;
}

.dr-row.penalty {
	text-align: center;
}

.dr-entry-table td {
	padding: 5px;
}

.hit-locations.master-location {
	text-align: center;
	font-weight: bold;
	font-size: 16px;
	line-height: 20px;
	border-bottom: 2px solid #b5b3a4;
}

.injuryTolerancesTable {
	width: unset;
	margin: 0px 5px;
}

.injuryTolerancesCheckTd {
	width: 20px;
}

.injuryTolerancesLabel {
	width: auto;
}

.hit-location-options {
	flex: 1;
}

.hitLocations {
	flex: 1;
	display: grid;
	grid-template-columns: repeat(35,15px);
	grid-template-rows: repeat(38,15px);
	text-align: center;
}

.hitLocations div {
	border: #7a7971 solid 1px;
	font-weight: bold;
}

.location-skull {
	grid-column: 11 / 19;
	grid-row: 1 / 3;
	background-color: #D9D9D9;
}

.location-ear-left {
	grid-column: 9 / 11;
	grid-row: 3 / 6;
	background-color: #16365C;
	color: aliceblue;
}
/* ... */

